# ChangeLog for app-portage/elogv
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/elogv/ChangeLog,v 1.32 2008/03/13 06:52:33 opfer Exp $

  13 Mar 2008; Christian Faulhammer <opfer@gentoo.org> elogv-0.6.3.ebuild:
  stable x86/amd64

*elogv-0.6.3 (12 Feb 2008)

  12 Feb 2008; Christian Faulhammer <opfer@gentoo.org> -elogv-0.6.2.ebuild,
  +elogv-0.6.3.ebuild:
  version bump and clean up

*elogv-0.6.2 (05 Feb 2008)

  05 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  -files/elogv-0.6.1-refresh_screen.patch,
  -files/elogv-0.6.1-segfault_delete.patch,
  -files/elogv-0.6.1-vi_movement.patch, -elogv-0.6.1-r3.ebuild,
  +elogv-0.6.2.ebuild:
  version bump which incorporates all fixes already done here and uses
  distfiles for installation

*elogv-0.6.1-r3 (05 Feb 2008)

  05 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  files/elogv-0.6.1-refresh_screen.patch,
  files/elogv-0.6.1-segfault_delete.patch,
  files/elogv-0.6.1-vi_movement.patch, metadata.xml, -elogv-0.6.1-r2.ebuild,
  +elogv-0.6.1-r3.ebuild:
  rework patches by help of Luca Marturana <lucamarturana AT gmail DOT com>
  and Michał Kiedrowicz <esqualante AT o2 DOT pl>. Closes bug 208842. Make
  myself first in metadata.xml. Clean up

*elogv-0.6.1-r2 (04 Feb 2008)

  04 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  files/elogv-0.6.1-refresh_screen.patch,
  +files/elogv-0.6.1-segfault_delete.patch,
  +files/elogv-0.6.1-vi_movement.patch, -elogv-0.6.1-r1.ebuild,
  +elogv-0.6.1-r2.ebuild:
  rework fix for segfault, thanks Michał Kiedrowicz <esqualante AT o2 DOT pl>
  for providing the better fix; split up fixes for two separate bugs in two
  separate patches; add Vi like movement keys; clean old revision

*elogv-0.6.1-r1 (02 Feb 2008)

  02 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  +files/elogv-0.6.1-refresh_screen.patch,
  -files/elogv-0.6-filename_read.patch, +elogv-0.6.1-r1.ebuild: