@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST elogv-0.6.1.tar.bz2 12439 RMD160 4c5cd7dd98cf7a463c2d55b0a8cf33e1f887a813 SHA1 cba1e8d9f183556b507f9e1a313d9ae2e0904994 SHA256 3e3aacc7587d2660b5c0632176915d9f96955df7b8fc533a4b98452443fe13c7
 DIST elogv-0.6.3.tar.bz2 6805 RMD160 321299aabd3b3fed6c8d535391f9476797acf10f SHA1 94c11982c81e52e1eaab4793803a76dff4cfa366 SHA256 5b781a86719af3876d8096d3699528bf1d17e4a0979c464f84ce11e0bf62bb60
-EBUILD elogv-0.6.1.ebuild 1802 RMD160 c667d1003b6c0af0bc86ea3b9da361c958dd8c41 SHA1 df772b8723d738b9dd99c60f3d5b4028b9e6cf61 SHA256 b19f5d5a403320e2a4a851e557e51ab8ca8725614cd81fdeef67b30f4054e144
 EBUILD elogv-0.6.3.ebuild 1655 RMD160 8c6220a064695d5742d45b1930541ec4dd3666af SHA1 53810518f0079553577005fdb8c996d61814f85b SHA256 a3f004a8213a320cabbf9d664a1b1ce15331e09fed4d916004f4ec88e711f1d8
-MISC ChangeLog 5610 RMD160 227192ae64e97898ce8a54014f989b21a4d45312 SHA1 d9648715fe927191cc4ffb0f525ccf25eedc1c16 SHA256 1b83315764ed7a44f6a154b7f690502b1b6b1bacf646aff0c6dcdbe7831ab489
+MISC ChangeLog 5698 RMD160 5cf2e0ee02bd274b0c644d98593ca6b204cc417d SHA1 fe76991948041074065cf7ef2c174ee85d411868 SHA256 09a5c88232b277a9ef283859ea603f03b1f4506e5c0d5d126f31057b3bb5478e
 MISC metadata.xml 267 RMD160 5b9a913667f225a500aaf2c50c5bebc26b87ce79 SHA1 9d7ef397ec31a2a145659d64247391872efbe276 SHA256 4518b48c74da1a11e93946e907497777e654197b22711bf06ca195c6d970abb2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFH2M/WNQqtfCuFneMRArIuAKCGsItqqRgxYaRqyRHuQEJAFL/mqwCfZv9n
-lTpMDZaqIkuQfnjfxRRqFKU=
-=h0ve
+iD8DBQFH3T+ENQqtfCuFneMRArLKAJ9/Q+xJaOXomykTcdc2MiLzY8LfjwCeO6eG
+cB49jRnJ7rFJ3Riy+MkV/sY=
+=YqQl
 -----END PGP SIGNATURE-----
