@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/elogv
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/elogv/ChangeLog,v 1.32 2008/03/13 06:52:33 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/elogv/ChangeLog,v 1.33 2008/03/16 15:39:45 opfer Exp $
+
+  16 Mar 2008; Christian Faulhammer <opfer@gentoo.org> -elogv-0.6.1.ebuild:
+  clean up
 
   13 Mar 2008; Christian Faulhammer <opfer@gentoo.org> elogv-0.6.3.ebuild:
   stable x86/amd64
